Fix overlapping issue between sidebar and dropdown menus; improve responsiveness
- Modified the sidebar and dropdown menus to resolve overlap issues.
- Updated CSS to ensure the dropdown menu correctly positions itself and does not overlap with the sidebar.
- Enhanced responsiveness by adjusting styles for different window widths.
- Implemented a toggle button for mobile view to control the visibility of the sidebar and dropdown menus.
- Improved visual consistency and usability across different devices.

These changes ensure a better user experience and proper layout adjustments based on window size.

--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -1,5 +1,5 @@
 menu {
-  width: 100px;
+  width: 90px;
   height: auto;
   background: #19162c;
   display: flex;
@@ -132,6 +132,35 @@ menu ul li:hover .tooltip {
 .lastMenu {
   margin-top: auto;
   background-color: transparent;
+}
+
+/* New styles for toggle button */
+.menu-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 5px;
+  top: 10px;
+  background: #19162c;
+}
+
+.menu-toggle {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.menu-toggle:hover {
+  color: #cf00a3; /* Change to your hover color */
+}
+
+/* Adjust styles for dropdown menus */
+.menu-header .logo {
+  margin-left: 10px;
 }
 
 @media only screen and (max-width: 525px) {
